commentcrud 지우고 human에 합침

--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -156,6 +156,9 @@
       .comment_body {
         font-size: 1.1rem;
       }
+      .teamPage input:hover {
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
