cal 등록,수정 구분

--- a/cal/templates/cal.html
+++ b/cal/templates/cal.html
@@ -139,7 +139,7 @@
     <div class="calPage">
       <!-- <h1><a href="{% url 'calendar' %}" style="color: rgb(72, 101, 173);">일정관리</a></h1> -->
       <div class="nav_item">
-        <a href="{% url 'new' %}"><p class="cal_add">✚ 일정 추가</p></a>
+        <a href="{% url 'eventcreate' %}"><p class="cal_add">✚ 일정 추가</p></a>
       </div>
       <div class="outer">
         <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"><span class="left">＜</span> </a>
