--- a/human/templates/humanhome.html
+++ b/human/templates/humanhome.html
@@ -146,7 +146,7 @@
             </div>
           </div>
           <p class="team_title">{{ result.title }}</p>
-          <p class="team_body">{{ result.summary }}...</p>
+          <p class="team_body">{{ result.summary }}</p>
         </a>
       </div>
       {% endfor %}
@@ -170,7 +170,7 @@
             </div>
           </div>
           <p class="team_title">{{ post.title }}</p>
-          <p class="team_body">{{ post.summary }}...</p>
+          <p class="team_body">{{ post.summary }}</p>
         </a>
       </div>
       {% endfor %}
