--- a/qna/templates/qna.html
+++ b/qna/templates/qna.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -79,16 +81,32 @@
       }
       .qna_title {
         color:rgb(72, 101, 173);
+        margin-top: 1.5rem;
         font-size: 1.3rem;
         font-weight: bold;
-      }
-      .qna_date {
-        color: gray;
-        font-size: small;
       }
       .qna_body {
         font-size: 1.1rem;
         line-height: 1.7rem;
+      }
+      .qna_post_user {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .qna_user {
+        font-size: 1.2rem;
+        margin-right: 20px;
+      }
+      .qna_date {
+        color: gray;
+        font-size: small;
+        margin-top: 3px;
+      }
+      .userImg {
+        max-height: 30px;
+        width: auto;
+        margin-right: 10px;
       }
     </style>
   </head>
@@ -96,26 +114,66 @@
     <div class="qnaPage">
       <h1><a href="{% url 'qna' %}" style="color: rgb(72, 101, 173);">Q&A</a></h1>
       <div class="qna_search">
-        <select id="filter" name="filter">
-          <option value="" disabled selected>필터</option>
-          <option value="latest">최신순</option>
-          <option value="popularity">인기순</option>
-          <option value="views">조회순</option>
-        </select>
-  
-        <input class="search" type="text" placeholder="검색어를 입력하세요" />
-        <a href="{% url 'postcreate' %}"><p class="qna_create">✏️ 질문하기</p></a>
+        <form action="{% url 'q_result' %}" method="get" id="type_query" style="display: inline;">
+          <select name="order" onchange="javascript:{document.getElementById('type_query').submit();}">
+            <option value="" disabled selected>필터</option>
+            <option value="최신순" {% if order == "최신순" %}selected{% endif %}>최신순</option>
+            <option value="인기순" {% if order == "인기순" %}selected{% endif %}>인기순</option>
+          </select>
+    
+          <input class="search" name="query" type="text" placeholder="검색어를 입력하세요" />
+        </form>
+        {% if user.is_authenticated %}
+        <a href="{% url 'postcreate' user.id %}"><p class="qna_create">✏️ 질문하기</p></a>
+        {% endif %}
       </div>
-
-      {% for qna in qnas.all %}
-      <div class="qna_post">
-        <a href="{% url 'detail' qna.id %}">
-          <p class="qna_title">{{ qna.title }}</p>
-          <p class="qna_date">{{ qna.pub_date }}</p>
-          <p class="qna_body">{{ qna.summary }}...</p>
-        </a>
-      </div>
-      {% endfor %}
+      {% if q_results %}
+        {% for result in q_results.all %}
+        <div class="qna_post">
+          {% if user.is_authenticated %}
+          <a href="{% url 'detail' result.id user.id %}">
+          {% else %}
+          <a href="{% url 'detail_visitor' qna.id %}"> 
+          {% endif %}
+            <div class="qna_post_user">
+              <div style="display: flex; align-items: center;">
+                <img class="userImg" src="{% static 'user.png' %}" alt="user">
+                <span class="qna_user">{{ result.user.username }}</span>
+                <span class="qna_date">{{ result.created_at }}</span>
+              </div>
+              <div>
+                <span>❤️ {{ result.like_count }}</span>
+              </div>
+            </div>
+            <p class="qna_title">{{ result.title }}</p>
+            <p class="qna_body">{{ result.summary }}</p>
+          </a>
+        </div>
+        {% endfor %}
+      {% else %}
+        {% for qna in qnas.all %}
+        <div class="qna_post">
+          {% if user.is_authenticated %}
+          <a href="{% url 'detail' qna.id user.id %}">
+          {% else %}
+          <a href="{% url 'detail_visitor' qna.id %}"> 
+          {% endif %}
+            <div class="qna_post_user">
+              <div style="display: flex; align-items: center;">
+                <img class="userImg" src="{% static 'user.png' %}" alt="user">
+                <span class="qna_user">{{ qna.user.username }}</span>
+                <span class="qna_date">{{ qna.created_at }}</span>
+              </div>
+              <div>
+                <span>❤️ {{ qna.like_count }}</span>
+              </div>
+            </div>
+            <p class="qna_title">{{ qna.title }}</p>
+            <p class="qna_body">{{ qna.summary }}</p>
+          </a>
+        </div>
+        {% endfor %}
+      {% endif %}
     </div>
   </body>
 </html>
