--- a/cal/templates/cal.html
+++ b/cal/templates/cal.html
@@ -118,28 +118,20 @@
         margin-top: 1rem;
         margin-left: 0.5rem;
       }
-
-      /* .form {
-        margin: auto;
-      }
-      .form input,
-      .form select,
-      .form textarea {
-        border-radius: 5px;
-        border: 1px solid #17a2b8;
-        outline: none;
-        background: none;
-        padding: 5px;
-        width: 100%;
-      } */
     </style>
   </head>
 
   <body>
     <div class="calPage">
-      <!-- <h1><a href="{% url 'calendar' %}" style="color: rgb(72, 101, 173);">일정관리</a></h1> -->
       <div class="nav_item">
-        <a href="{% url 'eventcreate' %}"><p class="cal_add">✚ 일정 추가</p></a>
+        <a href="{% url 'eventcreate' user.id %}"><p class="cal_add">✚ 일정 추가</p></a>
+        <!--
+        {% if user.is_authenticated %}
+        <a href="{% url 'eventcreate' user.id %}"><p class="cal_add">✚ 일정 추가</p></a>
+        {% else %}
+        <a href="{% url 'login' %}"><p class="cal_add">로그인 후 이용해 주세요</p></a>
+        {% endif %}
+        -->
       </div>
       <div class="outer">
         <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"><span class="left">＜</span> </a>
