--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -48,6 +48,7 @@
             <a href=""><p>내가 쓴 글</p></a>
             <a href=""><p>내가 쓴 댓글</p></a>
             <a href="{% url 'myscrap' user.id %}"><p>내 스크랩</p></a>
+            <a href="{% url 'calendar' user.id %}"><p>내 일정</p></a>
         </div>
         <div class="home_rightarea">
           <div class="home_recommend">
