--- a/user/templates/myPage.html
+++ b/user/templates/myPage.html
@@ -43,6 +43,7 @@
         <a href=""><p>내가 쓴 글</p></a>
         <a href=""><p>내가 쓴 댓글</p></a>
         <a href="{% url 'myscrap' user.id %}"><p>내 스크랩</p></a>
+        <!--<a href="{% url 'cal' user.id %}"><p>내 일정</p></a>-->
       </div>
     </div>
   </body>
