--- a/cal/templates/cal.html
+++ b/cal/templates/cal.html
@@ -139,7 +139,14 @@
     <div class="calPage">
       <!-- <h1><a href="{% url 'calendar' %}" style="color: rgb(72, 101, 173);">일정관리</a></h1> -->
       <div class="nav_item">
-        <a href="{% url 'eventcreate' %}"><p class="cal_add">✚ 일정 추가</p></a>
+        <a href="{% url 'eventcreate' user.id %}"><p class="cal_add">✚ 일정 추가</p></a>
+        <!--
+        {% if user.is_authenticated %}
+        <a href="{% url 'eventcreate' user.id %}"><p class="cal_add">✚ 일정 추가</p></a>
+        {% else %}
+        <a href="{% url 'login' %}"><p class="cal_add">로그인 후 이용해 주세요</p></a>
+        {% endif %}
+        -->
       </div>
       <div class="outer">
         <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"><span class="left">＜</span> </a>
