--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -94,8 +94,9 @@
           {% if user.is_authenticated %}
           <a href="{% url 'calendar' user.id %}">일정관리</a>
           {% else %}
-          <a href="">일정관리</a>
+          <a href="{% url 'calForAll' %}">일정관리</a>
           {% endif %}
+          
           <a href="{% url 'qna' %}">Q&A</a>
         </span>
         <span class="header_user">
